# apis/gen/com/nuinfra/control_plane/v1alpha1/ListSandboxRequestOrBuilder.java
@@ -1,89 +1,0 @@
-// Generated by the protocol buffer compiler.  DO NOT EDIT!
-// NO CHECKED-IN PROTOBUF GENCODE
-// source: nuinfra/control_plane/v1alpha1/sandbox.proto
-// Protobuf Java Version: 4.33.2
-
-package com.nuinfra.control_plane.v1alpha1;
-
-@com.google.protobuf.Generated
-public interface ListSandboxRequestOrBuilder extends
-    // @@protoc_insertion_point(interface_extends:nuinfra.control_plane.v1alpha1.ListSandboxRequest)
-    com.google.protobuf.MessageOrBuilder {
-
-  /**
-   * <code>string namespace = 1 [json_name = "namespace", (.buf.validate.field) = { ... }</code>
-   * @return The namespace.
-   */
-  java.lang.String getNamespace();
-  /**
-   * <code>string namespace = 1 [json_name = "namespace", (.buf.validate.field) = { ... }</code>
-   * @return The bytes for namespace.
-   */
-  com.google.protobuf.ByteString
-      getNamespaceBytes();
-
-  /**
-   * <code>string node_id = 2 [json_name = "nodeId"];</code>
-   * @return The nodeId.
-   */
-  java.lang.String getNodeId();
-  /**
-   * <code>string node_id = 2 [json_name = "nodeId"];</code>
-   * @return The bytes for nodeId.
-   */
-  com.google.protobuf.ByteString
-      getNodeIdBytes();
-
-  /**
-   * <code>.nuinfra.control_plane.v1alpha1.SandboxStatus.Phase phase = 3 [json_name = "phase"];</code>
-   * @return The enum numeric value on the wire for phase.
-   */
-  int getPhaseValue();
-  /**
-   * <code>.nuinfra.control_plane.v1alpha1.SandboxStatus.Phase phase = 3 [json_name = "phase"];</code>
-   * @return The phase.
-   */
-  com.nuinfra.control_plane.v1alpha1.SandboxStatus.Phase getPhase();
-
-  /**
-   * <pre>
-   * A token used to paginate through results, allowing retrieval of additional pages after a previous request.
-   * </pre>
-   *
-   * <code>string continuation_token = 4 [json_name = "continuationToken"];</code>
-   * @return The continuationToken.
-   */
-  java.lang.String getContinuationToken();
-  /**
-   * <pre>
-   * A token used to paginate through results, allowing retrieval of additional pages after a previous request.
-   * </pre>
-   *
-   * <code>string continuation_token = 4 [json_name = "continuationToken"];</code>
-   * @return The bytes for continuationToken.
-   */
-  com.google.protobuf.ByteString
-      getContinuationTokenBytes();
-
-  /**
-   * <pre>
-   * Specifies the number of results to retrieve for this request. Defaults to 30.
-   * Clients can request a maximum of 1000 results per request.
-   * </pre>
-   *
-   * <code>int32 results_per_page = 5 [json_name = "resultsPerPage", (.buf.validate.field) = { ... }</code>
-   * @return The resultsPerPage.
-   */
-  int getResultsPerPage();
-
-  /**
-   * <code>.nuinfra.control_plane.v1alpha1.ListSandboxRequest.Order order = 6 [json_name = "order"];</code>
-   * @return The enum numeric value on the wire for order.
-   */
-  int getOrderValue();
-  /**
-   * <code>.nuinfra.control_plane.v1alpha1.ListSandboxRequest.Order order = 6 [json_name = "order"];</code>
-   * @return The order.
-   */
-  com.nuinfra.control_plane.v1alpha1.ListSandboxRequest.Order getOrder();
-}
