# apis/gen/com/nuinfra/control_plane/v1alpha1/ListSandboxesRequestOrBuilder.java
@@ -1,0 +1,138 @@
+// Generated by the protocol buffer compiler.  DO NOT EDIT!
+// NO CHECKED-IN PROTOBUF GENCODE
+// source: nuinfra/control_plane/v1alpha1/sandbox.proto
+// Protobuf Java Version: 4.33.2
+
+package com.nuinfra.control_plane.v1alpha1;
+
+@com.google.protobuf.Generated
+public interface ListSandboxesRequestOrBuilder extends
+    // @@protoc_insertion_point(interface_extends:nuinfra.control_plane.v1alpha1.ListSandboxesRequest)
+    com.google.protobuf.MessageOrBuilder {
+
+  /**
+   * <pre>
+   * Filters sandboxes by namespace.
+   * Must match the format:
+   * - starts with a lowercase letter
+   * - contains only lowercase alphanumeric characters or hyphens
+   * - ends with an alphanumeric character
+   * Example: "default", "team-a"
+   * </pre>
+   *
+   * <code>string namespace = 1 [json_name = "namespace", (.buf.validate.field) = { ... }</code>
+   * @return The namespace.
+   */
+  java.lang.String getNamespace();
+  /**
+   * <pre>
+   * Filters sandboxes by namespace.
+   * Must match the format:
+   * - starts with a lowercase letter
+   * - contains only lowercase alphanumeric characters or hyphens
+   * - ends with an alphanumeric character
+   * Example: "default", "team-a"
+   * </pre>
+   *
+   * <code>string namespace = 1 [json_name = "namespace", (.buf.validate.field) = { ... }</code>
+   * @return The bytes for namespace.
+   */
+  com.google.protobuf.ByteString
+      getNamespaceBytes();
+
+  /**
+   * <pre>
+   * Filters sandboxes by the ID of the node where they are scheduled or running.
+   * </pre>
+   *
+   * <code>string node_id = 2 [json_name = "nodeId"];</code>
+   * @return The nodeId.
+   */
+  java.lang.String getNodeId();
+  /**
+   * <pre>
+   * Filters sandboxes by the ID of the node where they are scheduled or running.
+   * </pre>
+   *
+   * <code>string node_id = 2 [json_name = "nodeId"];</code>
+   * @return The bytes for nodeId.
+   */
+  com.google.protobuf.ByteString
+      getNodeIdBytes();
+
+  /**
+   * <pre>
+   * Filters sandboxes by their current lifecycle phase.
+   * If unset, sandboxes in all phases are returned.
+   * </pre>
+   *
+   * <code>.nuinfra.control_plane.v1alpha1.SandboxStatus.Phase status_phase = 3 [json_name = "statusPhase"];</code>
+   * @return The enum numeric value on the wire for statusPhase.
+   */
+  int getStatusPhaseValue();
+  /**
+   * <pre>
+   * Filters sandboxes by their current lifecycle phase.
+   * If unset, sandboxes in all phases are returned.
+   * </pre>
+   *
+   * <code>.nuinfra.control_plane.v1alpha1.SandboxStatus.Phase status_phase = 3 [json_name = "statusPhase"];</code>
+   * @return The statusPhase.
+   */
+  com.nuinfra.control_plane.v1alpha1.SandboxStatus.Phase getStatusPhase();
+
+  /**
+   * <pre>
+   * Token used for pagination.
+   * Pass the value returned in a previous response to retrieve the next page of results.
+   * Leave empty to start listing from the beginning.
+   * </pre>
+   *
+   * <code>string continuation_token = 4 [json_name = "continuationToken"];</code>
+   * @return The continuationToken.
+   */
+  java.lang.String getContinuationToken();
+  /**
+   * <pre>
+   * Token used for pagination.
+   * Pass the value returned in a previous response to retrieve the next page of results.
+   * Leave empty to start listing from the beginning.
+   * </pre>
+   *
+   * <code>string continuation_token = 4 [json_name = "continuationToken"];</code>
+   * @return The bytes for continuationToken.
+   */
+  com.google.protobuf.ByteString
+      getContinuationTokenBytes();
+
+  /**
+   * <pre>
+   * Maximum number of sandboxes to return in this request.
+   * Defaults to 30 if not specified.
+   * The maximum allowed value is 1000.
+   * </pre>
+   *
+   * <code>int32 page_size = 5 [json_name = "pageSize", (.buf.validate.field) = { ... }</code>
+   * @return The pageSize.
+   */
+  int getPageSize();
+
+  /**
+   * <pre>
+   * Sort order applied to the results based on last_modified_at.
+   * </pre>
+   *
+   * <code>.nuinfra.control_plane.v1alpha1.ListSandboxesRequest.Order sort_order = 6 [json_name = "sortOrder"];</code>
+   * @return The enum numeric value on the wire for sortOrder.
+   */
+  int getSortOrderValue();
+  /**
+   * <pre>
+   * Sort order applied to the results based on last_modified_at.
+   * </pre>
+   *
+   * <code>.nuinfra.control_plane.v1alpha1.ListSandboxesRequest.Order sort_order = 6 [json_name = "sortOrder"];</code>
+   * @return The sortOrder.
+   */
+  com.nuinfra.control_plane.v1alpha1.ListSandboxesRequest.Order getSortOrder();
+}
